Criado projeto com scroll view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">CardapioProject</string>
+    <string name="texto_maracarraocarbonara">MACARRÃO CARBONARA</string>
+    <string name="texto_risotto">RISOTTO CREMOSO</string>
+    <string name="texto_rondelli">RONDELLI ITALIANO</string>
 </resources>
+
+<TextView
+    android:id="@_id/textView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/texto_macarraocarbonara" />
+
+<ImageView
+    android:id="@+id/imageView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:contentDescription="@string/texto_macarraocarbonara"
+    app:srcCompat="@drawable/macarraocarbonara" />
